- Add webpack auto reload function

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         </ul>
       </nav>
     </div>
+    <script src="http://localhost:3001/webpack-dev-server.js"></script>
     <script type="text/javascript" src="build/app.js"></script>
   </body>
 </html>
